# zz_game

./: Cargo.toml
assets/: README.md
assets/maps/: map.ron
assets/tilesets/: library.ron
crates/tilemap_core/: Cargo.toml
crates/tilemap_core/src/: lib.rs
crates/tilemap_editor/: Cargo.toml
crates/tilemap_editor/src/: main.rs
crates/tilemap_editor/src/editor/: app.rs  mod.rs  paths.rs  persistence.rs  tileset.rs  types.rs  ui.rs  util.rs  world.rs
crates/tilemap_editor/src/editor/tileset/: library.rs  loading.rs  map_setup.rs  open.rs  rect.rs  spawn.rs
crates/tilemap_editor/src/editor/types/: camera.rs  clipboard.rs  config.rs  context_menu.rs  editor_state.rs  input.rs  selection.rs  tilemap.rs  tileset.rs  tools.rs  ui.rs  undo.rs
crates/tilemap_editor/src/editor/ui/: actions.rs  context_menu.rs  font.rs  hud.rs  layers.rs  map_size.rs  menubar.rs  palette.rs  root.rs  tileset_menu.rs  tools.rs  util.rs
crates/tilemap_editor/src/editor/world/: camera.rs  canvas.rs  context_menu.rs  eyedropper.rs  layers.rs  paste_apply.rs  paste_helpers.rs  paste_preview.rs  paste_transform.rs  render_sync.rs  save_load.rs  selection_box.rs  selection_move.rs  selection_shortcuts.rs  selection_transform.rs  shift_map.rs  shortcuts.rs  undo.rs
crates/tilemap_editor/src/editor/world/tools/: fill.rs  mod.rs  paint.rs  rect.rs
crates/tilemap_format/: Cargo.toml
crates/tilemap_format/src/: lib.rs
docs/: code_tree.md  tilemap_editor_controls.md  tilemap_editor_design.md  tilemap_editor_tiled_design.md
src/: main.rs
