[package]
name = "tilemap_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
bevy_ecs_tilemap = "0.18"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rfd = "0.15"
blake3 = "1"
tilemap_core = { path = "../tilemap_core", features = ["serde", "bevy"] }
tilemap_format = { path = "../tilemap_format" }
